Добавил страницу Каталог. Определил корректную работу ссылок. доделал Подвал сайта

--- a/02_HTML_CSS/01_DZ/catalog.html
+++ b/02_HTML_CSS/01_DZ/catalog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THE BRAND OF LUXERIOUS FASHION</title>
+    <title>Catalog</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./img/icon/Group-2.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,89 +53,14 @@
         </div>
     </header>
 
-    <div class="content">
-            <div class="title">
-                <div class="title_content title_center">
-                    <div class="title_content_left">
-                        <img src="./img/title.png" alt="man" class="title_content_img">
-                    </div>
-                    <div class="title_headers">
-                        <div class="title_header">
-                            <h1 class="title-header center">THE BRAND <span class="title-header-down"> OF&nbsp;LUXERIOUS&nbsp;<span class="title-header-red">FASHION</span></span></h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="page_product_top center">
+        <div class="page_product_top_left"><a href="#">NEW ARRIVALS</a></div>
+        <div class="page_product_top_right">
+          <p>HOME / MEN / <span>NEW ARRIVALS</span></p>
         </div>
-        
-        <div class="offer center">
-            <div class="offer_content">
-                <div class="offer_cards_up">
+    </div>
 
-                    <div class="offer_card">
-                        <div class="offer_card_background">
-                            <img src="./img/offer_card_1.jpeg" alt="women" class="offer_card-img">
-                            <div class="offer_card-1">
-                                <div class="offer_card_text">
-                                    <p class="offer_card-text">30% OFF</p>
-                                </div>
-                                <div class="offer_card_group">
-                                    <p class="offer_card-group">FOR WOMEN</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="offer_card">
-                        <div class="offer_card_background">
-                            <img src="./img/offer_card_2.jpeg" alt="man" class="offer_card-img">
-                            <div class="offer_card-1">
-                                <div class="offer_card_text">
-                                    <p class="offer_card-text">hot deal</p>
-                                </div>
-                                <div class="offer_card_group">
-                                    <p class="offer_card-group">FOR men</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="offer_card">
-                        <div class="offer_card_background">
-                            <img src="./img/offer_card_3.jpeg" alt="kids" class="offer_card-img">
-                            <div class="offer_card-1">
-                                <div class="offer_card_text">
-                                    <p class="offer_card-text">NEW ARRIVALS</p>
-                                </div>
-                                <div class="offer_card_group">
-                                    <p class="offer_card-group">FOR KIDS</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="offer_cards_down">
-                    <div class="offer_card">
-                        <div class="offer_card_background">
-                            <img src="./img/offer_card_down.jpeg" alt="accesories" class="offer_card-img">
-                            <div class="offer_card-1">
-                                <div class="offer_card_text">
-                                    <p class="offer_card-text">luxirous & trendy</p>
-                                </div>
-                                <div class="offer_card_group">
-                                    <p class="offer_card-group">accesories</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-        <div class="products center">
-            <div class="products_header">
-                <h3 class="products_header-head">Fetured Items</h3>
-                <p class="products_header-text">Shop for items based on what we featured in this week</p>
-            </div>
+    <div class="products center">
             <div class="products_elements">
                 <div class="products_card">
                     <div class="products_card_img">
@@ -295,9 +220,6 @@
                     </div>
                 </div>
             </div> 
-            <div class="products_button">
-                <a href="./catalog.html" class="products_button_link">Browse All Product</a>
-            </div>
         </div>
     </div>
 
