--- a/02_HTML_CSS/01_DZ/product.html
+++ b/02_HTML_CSS/01_DZ/product.html
@@ -415,102 +415,105 @@
     </div>
 
     <footer class="footer">
-      <div class="footer_head center">
-        <div class="footer_head_left">
-          <img
-            src="./img/footer_pic.png"
-            alt="face"
-            class="footer_head_left_pic"
-          />
-          <p class="footer_head_left_text">
-            &laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi,
-            a&nbsp;pulvinar purus condimentum&raquo;
-          </p>
+      <div class="footer_title_background">
+          <div class="footer_title center">
+            <div class="footer_title_left">
+              <img
+                src="./img/footer_pic.png"
+                alt="face"
+                class="footer_title_left_pic"
+              />
+              <p class="footer_title_left_text">
+                &laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi,
+                a&nbsp;pulvinar purus condimentum&raquo;
+              </p>
+            </div>
+            <div class="footer_title_right">
+              <p class="footer_title_right_text">
+                <span class="footer_title_right_header">SUBSCRIBE</span>
+                FOR&nbsp;OUR&nbsp;NEWLETTER&nbsp;AND&nbsp;PROMOTION
+              </p>
+              <form action="#" class="footer_title_right_input">
+                <input
+                  type="email"
+                  class="footer_title_right_input_email"
+                  id="footer_title_right_input-button"
+                  placeholder="Enter Your Email"
+                  required
+                />
+                <button
+                  type="submit"
+                  id="footer_title_right_input-button"
+                  class="footer_title_right_input_button"
+                >
+                  Subscribe
+                </button>
+              </form>
+            </div>
+          </div>
+          
+      </div>
+    <div class="footer_down center">
+      <p class="footer_down_left">
+        &copy;&nbsp;2023 Brand All Rights Reserved.
+      </p>
+      <div class="footer_down_icons">
+        <div class="footer_down_icons_pinterest">
+          <svg
+            width="32"
+            height="32"
+            viewBox="0 0 32 32"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M31.9262 0H0.475586V32H31.9262V0Z" fill="white" />
+            <g clip-path="url(#clip0_69_374)">
+              <path
+                d="M16.7403 8.20312C13.5556 8.20312 10.4082 10.3406 10.4082 13.8C10.4082 16 11.6374 17.25 12.3823 17.25C12.6896 17.25 12.8666 16.3875 12.8666 16.1438C12.8666 15.8531 12.1309 15.2344 12.1309 14.025C12.1309 11.5125 14.0305 9.73125 16.4889 9.73125C18.6027 9.73125 20.1671 10.9406 20.1671 13.1625C20.1671 14.8219 19.506 17.9344 17.3642 17.9344C16.5913 17.9344 15.9302 17.3719 15.9302 16.5656C15.9302 15.3844 16.7496 14.2406 16.7496 13.0219C16.7496 10.9531 13.835 11.3281 13.835 13.8281C13.835 14.3531 13.9002 14.9344 14.133 15.4125C13.7046 17.2688 12.8293 20.0344 12.8293 21.9469C12.8293 22.5375 12.9131 23.1188 12.969 23.7094C13.0745 23.8281 13.0218 23.8156 13.1832 23.7563C14.7476 21.6 14.6917 21.1781 15.3994 18.3562C15.7812 19.0875 16.7683 19.4812 17.5505 19.4812C20.8469 19.4812 22.3275 16.2469 22.3275 13.3313C22.3275 10.2281 19.6643 8.20312 16.7403 8.20312Z"
+                fill="black"
+              />
+            </g>
+            <defs>
+              <clipPath id="clip0_69_374">
+                <rect
+                  width="11.9193"
+                  height="16"
+                  fill="white"
+                  transform="translate(10.4082 8)"
+                />
+              </clipPath>
+            </defs>
+          </svg>
         </div>
-        <div class="footer_head_right">
-          <p class="footer_head_right_text">
-            <span class="footer_head_right_header">SUBSCRIBE</span>
-            FOR&nbsp;OUR&nbsp;NEWLETTER&nbsp;AND&nbsp;PROMOTION
-          </p>
-          <form action="#" class="footer_head_right_input">
-            <input
-              type="email"
-              class="footer_head_right_input_email"
-              id="footer_head_right_input-button"
-              placeholder="Enter Your Email"
-              required
-            />
-            <button
-              type="submit"
-              id="footer_head_right_input-button"
-              class="footer_head_right_input_button"
-            >
-              Subscribe
-            </button>
-          </form>
+        <div class="footer_down_icons_x">
+          <svg
+            width="32"
+            height="32"
+            viewBox="0 0 32 32"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M31.664 0H0.213379V32H31.664V0Z" fill="white" />
+            <g clip-path="url(#clip0_69_370)">
+              <path
+                d="M22.4184 12.7411C22.4285 12.8833 22.4285 13.0254 22.4285 13.1675C22.4285 17.5025 19.1512 22.4975 13.1613 22.4975C11.3159 22.4975 9.60168 21.9594 8.15967 21.0254C8.42186 21.0558 8.67394 21.066 8.94622 21.066C10.4689 21.066 11.8706 20.5483 12.9899 19.665C11.558 19.6345 10.358 18.6904 9.94452 17.3909C10.1462 17.4213 10.3479 17.4416 10.5597 17.4416C10.8521 17.4416 11.1445 17.401 11.4168 17.33C9.92437 17.0254 8.80502 15.7056 8.80502 14.1117V14.0711C9.23861 14.3148 9.74285 14.467 10.2773 14.4873C9.39996 13.8985 8.82519 12.8934 8.82519 11.7563C8.82519 11.1472 8.98651 10.5888 9.26888 10.1015C10.8722 12.0914 13.2823 13.3908 15.9848 13.533C15.9344 13.2893 15.9041 13.0356 15.9041 12.7818C15.9041 10.9746 17.3562 9.50256 19.1613 9.50256C20.0991 9.50256 20.9461 9.8985 21.5411 10.5381C22.2772 10.396 22.9831 10.1218 23.6083 9.74622C23.3662 10.5077 22.852 11.1473 22.1764 11.5533C22.8318 11.4823 23.4671 11.2995 24.052 11.0457C23.6084 11.6954 23.0537 12.2741 22.4184 12.7411Z"
+                fill="black"
+              />
+            </g>
+            <defs>
+              <clipPath id="clip0_69_370">
+                <rect
+                  width="15.8924"
+                  height="16"
+                  fill="white"
+                  transform="translate(8.15967 8)"
+                />
+              </clipPath>
+            </defs>
+          </svg>
         </div>
       </div>
-      <div class="footer_down center">
-        <p class="footer_down_left">
-          &copy;&nbsp;2023 Brand All Rights Reserved.
-        </p>
-        <div class="footer_down_icons">
-          <div class="footer_down_icons_pinterest">
-            <svg
-              width="32"
-              height="32"
-              viewBox="0 0 32 32"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path d="M31.9262 0H0.475586V32H31.9262V0Z" fill="white" />
-              <g clip-path="url(#clip0_69_374)">
-                <path
-                  d="M16.7403 8.20312C13.5556 8.20312 10.4082 10.3406 10.4082 13.8C10.4082 16 11.6374 17.25 12.3823 17.25C12.6896 17.25 12.8666 16.3875 12.8666 16.1438C12.8666 15.8531 12.1309 15.2344 12.1309 14.025C12.1309 11.5125 14.0305 9.73125 16.4889 9.73125C18.6027 9.73125 20.1671 10.9406 20.1671 13.1625C20.1671 14.8219 19.506 17.9344 17.3642 17.9344C16.5913 17.9344 15.9302 17.3719 15.9302 16.5656C15.9302 15.3844 16.7496 14.2406 16.7496 13.0219C16.7496 10.9531 13.835 11.3281 13.835 13.8281C13.835 14.3531 13.9002 14.9344 14.133 15.4125C13.7046 17.2688 12.8293 20.0344 12.8293 21.9469C12.8293 22.5375 12.9131 23.1188 12.969 23.7094C13.0745 23.8281 13.0218 23.8156 13.1832 23.7563C14.7476 21.6 14.6917 21.1781 15.3994 18.3562C15.7812 19.0875 16.7683 19.4812 17.5505 19.4812C20.8469 19.4812 22.3275 16.2469 22.3275 13.3313C22.3275 10.2281 19.6643 8.20312 16.7403 8.20312Z"
-                  fill="black"
-                />
-              </g>
-              <defs>
-                <clipPath id="clip0_69_374">
-                  <rect
-                    width="11.9193"
-                    height="16"
-                    fill="white"
-                    transform="translate(10.4082 8)"
-                  />
-                </clipPath>
-              </defs>
-            </svg>
-          </div>
-          <div class="footer_down_icons_x">
-            <svg
-              width="32"
-              height="32"
-              viewBox="0 0 32 32"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path d="M31.664 0H0.213379V32H31.664V0Z" fill="white" />
-              <g clip-path="url(#clip0_69_370)">
-                <path
-                  d="M22.4184 12.7411C22.4285 12.8833 22.4285 13.0254 22.4285 13.1675C22.4285 17.5025 19.1512 22.4975 13.1613 22.4975C11.3159 22.4975 9.60168 21.9594 8.15967 21.0254C8.42186 21.0558 8.67394 21.066 8.94622 21.066C10.4689 21.066 11.8706 20.5483 12.9899 19.665C11.558 19.6345 10.358 18.6904 9.94452 17.3909C10.1462 17.4213 10.3479 17.4416 10.5597 17.4416C10.8521 17.4416 11.1445 17.401 11.4168 17.33C9.92437 17.0254 8.80502 15.7056 8.80502 14.1117V14.0711C9.23861 14.3148 9.74285 14.467 10.2773 14.4873C9.39996 13.8985 8.82519 12.8934 8.82519 11.7563C8.82519 11.1472 8.98651 10.5888 9.26888 10.1015C10.8722 12.0914 13.2823 13.3908 15.9848 13.533C15.9344 13.2893 15.9041 13.0356 15.9041 12.7818C15.9041 10.9746 17.3562 9.50256 19.1613 9.50256C20.0991 9.50256 20.9461 9.8985 21.5411 10.5381C22.2772 10.396 22.9831 10.1218 23.6083 9.74622C23.3662 10.5077 22.852 11.1473 22.1764 11.5533C22.8318 11.4823 23.4671 11.2995 24.052 11.0457C23.6084 11.6954 23.0537 12.2741 22.4184 12.7411Z"
-                  fill="black"
-                />
-              </g>
-              <defs>
-                <clipPath id="clip0_69_370">
-                  <rect
-                    width="15.8924"
-                    height="16"
-                    fill="white"
-                    transform="translate(8.15967 8)"
-                  />
-                </clipPath>
-              </defs>
-            </svg>
-          </div>
-        </div>
-      </div>
-    </footer>
+    </div>
+  </footer>
   </body>
 </html>
