актуализировал главный index.html

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         <li class="nav_elem">
           <a href="./02_HTML_CSS/01_DZ/index.html" target="_blank">ДЗ 1</a> (Препроцессы)
         </li>
+        <li class="nav_elem">
+          <a href="./02_HTML_CSS/02_seminar/index.html" target="_blank">Семинар 2</a> (Возможности HTML5. элемент details)
+        </li>
       </ul>
     </div>
   </body>
