--- a/02_HTML_CSS/02_seminar/index.html
+++ b/02_HTML_CSS/02_seminar/index.html
@@ -14,60 +14,84 @@
         Добавить стили для элемента summary
         Заменить стандартный треугольник на стрелку вправо \2192	 
         При открытии блока details заменить на стрелку вниз (данный код нужно найти в интернете) -->
-    <!-- <details>
-            <summary><span class="open">Открыть</span><span class="close">Закрыть</span> список</summary>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-            <p>Lorem ipsum dolor sit amet.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-            <p>Lorem ipsum dolor sit.</p>
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-        </details> -->
+    <div class="task_1">
+      <p>Задание 1</p>
 
-    <!-- <div class="sort_menu">
       <details>
-        <summary>TRENDING NOW</summary>
-      </details>
-      <details>
-        <summary>size</summary>
-        <div class="lable_check_box">
-          <label class="lable_check_box-input"
-            ><input type="checkbox" />XS</label
-          >
-          <label class="lable_check_box-input"
-            ><input type="checkbox" />S</label
-          >
-          <label class="lable_check_box-input"
-            ><input type="checkbox" />M</label
-          >
-          <label class="lable_check_box-input"
-            ><input type="checkbox" />L</label
-          >
-        </div>
-      </details>
-      <details>
-        <summary>price</summary>
+        <summary><span class="open">Открыть</span><span class="close">Закрыть</span> список</summary>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
       </details>
     </div>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita error
-      quis voluptates dignissimos amet deleniti illo ipsum, mollitia asperiores
-      pariatur rerum aliquid quisquam. In consequatur earum, ratione at optio
-      debitis.
-    </p> -->
 
-    <label
-      ><input type="checkbox" /><svg
-        width="32"
-        height="23"
-        viewBox="0 0 32 23"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z"
-          fill="#000000"
-        />
-      </svg>
-    </label>
+
+    <div class="task_2">
+      <p>Задание 2</p>
+
+      <div class="sort_menu">
+        <details>
+          <summary>TRENDING NOW</summary>
+        </details>
+        <details>
+          <summary>size</summary>
+          <div class="lable_check_box">
+            <label class="lable_check_box-input"
+              ><input type="checkbox" />XS</label
+            >
+            <label class="lable_check_box-input"
+              ><input type="checkbox" />S</label
+            >
+            <label class="lable_check_box-input"
+              ><input type="checkbox" />M</label
+            >
+            <label class="lable_check_box-input"
+              ><input type="checkbox" />L</label
+            >
+          </div>
+        </details>
+        <details>
+          <summary>price</summary>
+        </details>
+      </div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita error
+        quis voluptates dignissimos amet deleniti illo ipsum, mollitia asperiores
+        pariatur rerum aliquid quisquam. In consequatur earum, ratione at optio
+        debitis.
+      </p>
+  </div>
+
+  <div class="task_3">
+    <p>Задание 3</p>
+
+    <div class="box">
+      <input type="checkbox" id="input">
+      <label for="input">
+        <svg width="32" height="23" viewBox="0 0 32 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 23V20.31H32V23H0ZM0 12.76V10.07H32V12.76H0ZM0 2.69V0H32V2.69H0Z" fill="#000000"/>
+        </svg>
+      </label>
+      <div class="content">
+        <ul>
+          <li>text</li>
+          <li>text</li>
+          <li>text</li>
+          <li>text</li>
+          <li>text</li>
+        </ul>
+        <ul>
+          <li>text</li>
+          <li>text</li>
+          <li>text</li>
+          <li>text</li>
+          <li>text</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
   </body>
 </html>
