Верстаю страницу ДЗ 2

--- a/02_HTML_CSS/01_DZ/catalog.html
+++ b/02_HTML_CSS/01_DZ/catalog.html
@@ -136,6 +136,36 @@
         <div class="filter_sort">
             <details class="filter_sort_group">
                 <summary class="filter_sort_group_heading">
+                    <span class="filter_sort_group_heading_text">TRENDING NOW</span>
+                    <svg width="10.020000" height="5.003906" viewBox="0 0 10.02 5.00391" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <desc>
+                            Created with Pixso.
+                        </desc>
+                        <defs/>
+                        <path id="Vector" d="M5.00214 5.0022C4.83521 5.00244 4.67343 4.94434 4.54488 4.83789L0.258102 1.26538C0.112196 1.14429 0.0204411 0.969971 0.00302315 0.781006C-0.0143948 0.592041 0.0439491 0.404053 0.165222 0.258057C0.286493 0.112305 0.46076 0.0205078 0.649683 0.00292969C0.838606 -0.0144043 1.02671 0.0439453 1.17262 0.165283L5.00214 3.36597L8.83167 0.279541C8.90475 0.220215 8.98884 0.175781 9.0791 0.14917C9.16937 0.122314 9.26403 0.11377 9.35764 0.123779C9.45126 0.133545 9.54198 0.162109 9.6246 0.207275C9.70722 0.252197 9.7801 0.313232 9.83906 0.386719C9.90449 0.460205 9.95405 0.546387 9.98462 0.639893C10.0152 0.733398 10.0261 0.832275 10.0167 0.930176C10.0073 1.02808 9.97784 1.12305 9.93005 1.20898C9.88227 1.29492 9.81723 1.37012 9.73904 1.42993L5.45225 4.88062C5.32002 4.97046 5.16154 5.01318 5.00214 5.0022Z" fill="#6F6E6E" fill-opacity="1.000000" fill-rule="nonzero"/>
+                    </svg>
+                </summary>
+                <div class="filter_sort_group_checkbox">
+                    <label for="#" class="filter_sort_group_checkbox_label">
+                        <input type="checkbox" class="filter_sort_group_checkbox_input">
+                        XS
+                    </label>
+                    <label for="#" class="filter_sort_group_checkbox_label">
+                        <input type="checkbox" class="filter_sort_group_checkbox_input">
+                        S
+                    </label>
+                    <label for="#" class="filter_sort_group_checkbox_label">
+                        <input type="checkbox" class="filter_sort_group_checkbox_input">
+                        M
+                    </label>
+                    <label for="#" class="filter_sort_group_checkbox_label">
+                        <input type="checkbox" class="filter_sort_group_checkbox_input">
+                        L
+                    </label>
+                </div>
+            </details>
+            <details class="filter_sort_group" open>
+                <summary class="filter_sort_group_heading">
                     <span class="filter_sort_group_heading_text">SIZE</span>
                     <svg width="10.020000" height="5.003906" viewBox="0 0 10.02 5.00391" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <desc>
@@ -145,6 +175,50 @@
                         <path id="Vector" d="M5.00214 5.0022C4.83521 5.00244 4.67343 4.94434 4.54488 4.83789L0.258102 1.26538C0.112196 1.14429 0.0204411 0.969971 0.00302315 0.781006C-0.0143948 0.592041 0.0439491 0.404053 0.165222 0.258057C0.286493 0.112305 0.46076 0.0205078 0.649683 0.00292969C0.838606 -0.0144043 1.02671 0.0439453 1.17262 0.165283L5.00214 3.36597L8.83167 0.279541C8.90475 0.220215 8.98884 0.175781 9.0791 0.14917C9.16937 0.122314 9.26403 0.11377 9.35764 0.123779C9.45126 0.133545 9.54198 0.162109 9.6246 0.207275C9.70722 0.252197 9.7801 0.313232 9.83906 0.386719C9.90449 0.460205 9.95405 0.546387 9.98462 0.639893C10.0152 0.733398 10.0261 0.832275 10.0167 0.930176C10.0073 1.02808 9.97784 1.12305 9.93005 1.20898C9.88227 1.29492 9.81723 1.37012 9.73904 1.42993L5.45225 4.88062C5.32002 4.97046 5.16154 5.01318 5.00214 5.0022Z" fill="#6F6E6E" fill-opacity="1.000000" fill-rule="nonzero"/>
                     </svg>
                 </summary>
+                <div class="filter_sort_group_checkbox">
+                    <label class="filter_sort_group_checkbox_label">
+                        <input type="checkbox" class="filter_sort_group_checkbox_input">XS
+                    </label>
+                    <label class="filter_sort_group_checkbox_label">
+                        <input type="checkbox" class="filter_sort_group_checkbox_input">S
+                    </label>
+                    <label class="filter_sort_group_checkbox_label">
+                        <input type="checkbox" class="filter_sort_group_checkbox_input">M
+                    </label>
+                    <label class="filter_sort_group_checkbox_label">
+                        <input type="checkbox" class="filter_sort_group_checkbox_input">L
+                    </label>
+                </div>
+            </details>
+            <details class="filter_sort_group">
+                <summary class="filter_sort_group_heading">
+                    <span class="filter_sort_group_heading_text">PRICE</span>
+                    <svg width="10.020000" height="5.003906" viewBox="0 0 10.02 5.00391" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <desc>
+                            Created with Pixso.
+                        </desc>
+                        <defs/>
+                        <path id="Vector" d="M5.00214 5.0022C4.83521 5.00244 4.67343 4.94434 4.54488 4.83789L0.258102 1.26538C0.112196 1.14429 0.0204411 0.969971 0.00302315 0.781006C-0.0143948 0.592041 0.0439491 0.404053 0.165222 0.258057C0.286493 0.112305 0.46076 0.0205078 0.649683 0.00292969C0.838606 -0.0144043 1.02671 0.0439453 1.17262 0.165283L5.00214 3.36597L8.83167 0.279541C8.90475 0.220215 8.98884 0.175781 9.0791 0.14917C9.16937 0.122314 9.26403 0.11377 9.35764 0.123779C9.45126 0.133545 9.54198 0.162109 9.6246 0.207275C9.70722 0.252197 9.7801 0.313232 9.83906 0.386719C9.90449 0.460205 9.95405 0.546387 9.98462 0.639893C10.0152 0.733398 10.0261 0.832275 10.0167 0.930176C10.0073 1.02808 9.97784 1.12305 9.93005 1.20898C9.88227 1.29492 9.81723 1.37012 9.73904 1.42993L5.45225 4.88062C5.32002 4.97046 5.16154 5.01318 5.00214 5.0022Z" fill="#6F6E6E" fill-opacity="1.000000" fill-rule="nonzero"/>
+                    </svg>
+                </summary>
+                <div class="filter_sort_group_checkbox">
+                    <label for="#" class="filter_sort_group_checkbox_label">
+                        <input type="checkbox" class="filter_sort_group_checkbox_input">
+                        XS
+                    </label>
+                    <label for="#" class="filter_sort_group_checkbox_label">
+                        <input type="checkbox" class="filter_sort_group_checkbox_input">
+                        S
+                    </label>
+                    <label for="#" class="filter_sort_group_checkbox_label">
+                        <input type="checkbox" class="filter_sort_group_checkbox_input">
+                        M
+                    </label>
+                    <label for="#" class="filter_sort_group_checkbox_label">
+                        <input type="checkbox" class="filter_sort_group_checkbox_input">
+                        L
+                    </label>
+                </div>
             </details>
         </div>
     </div>
