Доделал домашнее задание

--- a/02_HTML_CSS/01_DZ/catalog.html
+++ b/02_HTML_CSS/01_DZ/catalog.html
@@ -31,16 +31,37 @@
                             <defs/>
                             <path d="M0 23L0 20.3101L32 20.3101L32 23L0 23ZM0 12.76L0 10.0699L16 10.0699L32 10.0699L32 12.76L0 12.76ZM0 2.68994L0 0L32 0L32 2.68994L16 2.68994L0 2.68994Z" fill="#E8E8E8" fill-opacity="1.000000" fill-rule="nonzero"/>
                         </svg>
-                        <input type="checkbox" id="burger">
+                        <input type="checkbox" id="burger" checked> 
                         <nav class="burger_nav">
                             <p class="nav_header">menu</p>
-                            <details class="nav_group">
+                            <details class="nav_group" open>
                                 <summary class="nav_group_name">man</summary>
                                 <div class="nav_group_elements">
                                     <a class="nav_group_link" href="#">Accessories</a>
                                     <a class="nav_group_link" href="#">Bags</a>
                                     <a class="nav_group_link" href="#">Denim</a>
                                     <a class="nav_group_link" href="#">T-Shirts</a>
+                                </div>
+                            </details>
+                            <details class="nav_group" open>
+                                <summary class="nav_group_name">women</summary>
+                                <div class="nav_group_elements">
+                                    <a class="nav_group_link" href="#">Accessories</a>
+                                    <a class="nav_group_link" href="#">Jackets & Coats</a>
+                                    <a class="nav_group_link" href="#">Polos</a>
+                                    <a class="nav_group_link" href="#">T-Shirts</a>
+                                    <a class="nav_group_link" href="#">Shirts</a>
+                                </div>
+                            </details>
+                            <details class="nav_group" open>
+                                <summary class="nav_group_name">kids</summary>
+                                <div class="nav_group_elements">
+                                    <a class="nav_group_link" href="#">Accessories</a>
+                                    <a class="nav_group_link" href="#">Jackets & Coats</a>
+                                    <a class="nav_group_link" href="#">Polos</a>
+                                    <a class="nav_group_link" href="#">T-Shirts</a>
+                                    <a class="nav_group_link" href="#">Shirts</a>
+                                    <a class="nav_group_link" href="#">Bags</a>
                                 </div>
                             </details>
                          </nav>
