Верстаю страницу ДЗ

--- a/02_HTML_CSS/01_DZ/catalog.html
+++ b/02_HTML_CSS/01_DZ/catalog.html
@@ -91,8 +91,13 @@
 
     <div class="page_product_top center">
         <div class="page_product_top_left"><a href="#">NEW ARRIVALS</a></div>
-        <div class="page_product_top_right">
-          <p>HOME / MEN / <span>NEW ARRIVALS</span></p>
+        <div class="breadcrumb">
+            <div class="breadcrumb__ul">
+                <li class="breadcrumb__li"><a href="" class="breadcrumb__link">home</a></li>
+                <li class="breadcrumb__li"><a href="" class="breadcrumb__link">men</a></li>
+                <li class="breadcrumb__li"><a href="" class="breadcrumb__link">new arrivals</a></li>
+            </div>
+          <!-- <p>HOME / MEN / <span>NEW ARRIVALS</span></p> -->
         </div>
     </div>
 
