доверстал страницу корзины

--- a/02_HTML_CSS/01_DZ/card.html
+++ b/02_HTML_CSS/01_DZ/card.html
@@ -247,11 +247,17 @@
       <div class="lists-cart__right">
         <form action="" method="post" class="address">
           <p class="address__header">SHIPPING AdDRESS</p>
-          <input type="text" name="" id="" class="address__input" placeholder="Bangladesh" required autofocus>
-          <input type="text" name="" id="" class="address__input" placeholder="State" required>
-          <input type="number" name="" id="" class="address__input" placeholder="Postcode / Zip" required>
+          <input type="text" class="address__input" placeholder="Bangladesh" required autofocus>
+          <input type="text" class="address__input" placeholder="State" required>
+          <input type="number" class="address__input" placeholder="Postcode / Zip" required>
           <button class="address__button" type="submit">GET A QUOTE</button>
         </form>
+          <div class="checkout">
+            <p class="checkout__sub">SUB TOTAL         $900</p>
+            <p class="checkout__grand">GRAND TOTAL      <span class="checkout__grand_span">$900</span></p>
+            <div class="checkout__hr"></div>
+            <button class="checkout__button" type="submit">PROCEED TO CHECKOUT</button>
+          </div>
       </div>
       
     </div>
