Доделал навигацию между вкладками

--- a/02_HTML_CSS/01_DZ/card.html
+++ b/02_HTML_CSS/01_DZ/card.html
@@ -109,7 +109,7 @@
               />
             </svg>
           </a>
-          <a href="#">
+          <a href="./card.html">
             <svg
               width="31.995575"
               height="29.000000"
