добавил код с семинара

--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
         <li class="nav_elem">
           <a href="./02_HTML_CSS/02_seminar/index.html" target="_blank">Семинар 2</a> (Возможности HTML5. элемент details)
         </li>
+        <li class="nav_elem">
+          <a href="./02_HTML_CSS/03_seminar/index.html" target="_blank">Семинар 3</a> (Возможности CSS3)
+        </li>
+        <li class="nav_elem">
+          <a href="./02_HTML_CSS/04_seminar/index.html" target="_blank">Семинар 4</a> (БЭМ и другие дополнения)
+        </li>
       </ul>
     </div>
   </body>
