Обновил ссылки на всех страницах

--- a/02_HTML_CSS/01_DZ/card.html
+++ b/02_HTML_CSS/01_DZ/card.html
@@ -90,7 +90,7 @@
               </nav>
             </label>
           </div>
-          <a href="#">
+          <a href="./registration.html">
             <svg
               width="29.000000"
               height="29.000000"
