--- a/02_HTML_CSS/01_DZ/index.html
+++ b/02_HTML_CSS/01_DZ/index.html
@@ -67,7 +67,7 @@
                          </nav>
                     </label>
                 </div>
-                <a href="#">
+                <a href="./registration.html">
                     <svg width="29.000000" height="29.000000" viewBox="0 0 29 29" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <desc>
                                 Created with Pixso.
